bk_ida/gccida/c2/real_value_truncate
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1565:10: error: conflicting types for 'real_value_truncate'
__int64  real_value_truncate( 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.h:406:24: note: previous declaration is here
extern REAL_VALUE_TYPE real_value_truncate PARAMS ((enum machine_mode,
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1599:12: error: expected expression
*( _OWORD *)v15.r = a7; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1599:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v15.r = a7; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1600:10: error: passing 'realvaluetype *' to parameter of incompatible type 'realvaluetype'; remove &
etrunci( &v20, v15); 
         ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1664:12: error: expected expression
*( _OWORD *)a1 = *( _OWORD *)v8->r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/real.c:1664:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)a1 = *( _OWORD *)v8->r; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/real_value_truncate/src/obj/real.o] Error 1
